Changes
=======

This documents changes as they are made.  Note that if you received this file
via CVS the version of the first entry is the forthcoming version number.

0.39
--------------------
- Default configuration is now written to config.dist on load
- Album and author lists are now dynamically allocated in the same way as
  genre lists, so no more compiled limit on tracks per album

0.38a - Aug 31st 2003
---------------------
- Fixed compilation problem
- Removed file descriptor leak on trackinfo errors

0.38 - Aug 31st 2003
--------------------
- Added SET VOLUME command to change relative track volume (a percentage,
  with 100 as default)
- Fixed HELP SET syntax display
- Increased space for album/track by one (now 7 characters instead of 6) in
  display
- Added xmp to default configuration
- Implemented volume control for Icecast output
- Make TREBLE/BASS return error for Icecast output mode (not implemented)
- Changed unheard and unrated from integers (1-4) to percentage for increased
  choice and made them options in configuration file.
- Changed default unheard rating from 0.75 (GOOD) to 0.55 (just above NEUTRAL)

0.37 - Aug 24th 2003
--------------------
- Changed to using execvp so PATH will affect the search for players
- Gap between songs is now an exact number of silence bytes, making it
  possible for Mserv to have no gap at all (useful for mixes)
- GAP now takes a floating point number
- Default configuration is now mostly commented out
- Split concept of currently decoding song and currently playing song so
  user's view of playing song can be independent of spawned player
- Completely re-worked pausing and stopping - now uses silence in the output
  routines rather than using unix signals to suspend play
- Created global.h for main structures

0.36 - Aug 9th 2003
-------------------
- Split output into modular compilation
- Added Icecast 2 streaming with libshout, libvorbisenc!
- Added configuration options for Icecast mount point and bitrate